<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tab_layout_icon"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tablayout_searchbar_height"
    android:layout_below="@id/tab_layout"
    app:tabTextColor="@color/dark_gray"
    android:background="@android:color/white"
    app:tabSelectedTextColor="@color/colorPrimary"
    app:tabIndicatorColor="@android:color/transparent"
    app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
    app:tabMode="scrollable">

    <android.support.design.widget.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foryou"
        android:icon="@drawable/ic_loyalty_black_24dp"/>

    <android.support.design.widget.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topcharts"
        android:icon="@drawable/ic_chart"/>

    <android.support.design.widget.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:icon="@drawable/ic_list_black_24dp"/>

    <android.support.design.widget.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editorschoice"
        android:icon="@drawable/ic_toys_black_24dp"/>

    <android.support.design.widget.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earlyaccess"
        android:icon="@drawable/ic_lock"/>

    <android.support.design.widget.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/family"
        android:icon="@drawable/ic_group_black_24dp"/>

</android.support.design.widget.TabLayout>