<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/search_view_inset">

    <ImageView
        android:id="@+id/app_image"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:contentDescription="@string/app_image"
        tools:src="@tools:sample/avatars"/>

    <LinearLayout
        android:id="@+id/app_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_margin_min"
            tools:text="Amazon Music"
            android:layout_weight="2"
            android:textSize="@dimen/textsize_small"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/vertical_ellipsis"
            android:gravity="end"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/app_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/app_size"
            android:textSize="@dimen/textsize_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/padding_margin_low"
            tools:text="12Mb"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_margin_low"
            android:text="@string/free_app"
            android:textAllCaps="true"
            android:textSize="@dimen/textsize_small"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>


</LinearLayout>